Completed Factorizer program

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /Classwork/HelloWorld/target/
 /Classwork/WindowMaster/target/
 /Classwork/PracticeProgramming/target/
+/Classwork/Factorizer/target/
