Completed interest calculator program

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /Classwork/WindowMaster/target/
 /Classwork/PracticeProgramming/target/
 /Classwork/Factorizer/target/
+/Classwork/InterestCalculator/target/
