Completed lucky sevens program

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /Classwork/PracticeProgramming/target/
 /Classwork/Factorizer/target/
 /Classwork/InterestCalculator/target/
+/Classwork/LuckySevens/target/
