State capitals exercise for HashMap practice

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /Classwork/Factorizer/target/
 /Classwork/InterestCalculator/target/
 /Classwork/LuckySevens/target/
+/Classwork/StateCapitals1/target/
