Completed Capitals 3 Exercise

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /Classwork/StateCapitals1/target/
 /Classwork/UserIO/target/
 /Classwork/StudentQuizGrades/target/
+/Classwork/StateCapitals3/target/
