Partially Completed Unit Tests excercises - I get the jist

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /Classwork/StudentQuizGrades/target/
 /Classwork/StateCapitals3/target/
 /Classwork/ClassRoster/target/
+/Classwork/StatelessUnitTesting/nbproject/
+/Classwork/StatelessUnitTesting/target/
