Test cases added to class roster - broken build

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /Classwork/ClassRoster/target/
 /Classwork/StatelessUnitTesting/nbproject/
 /Classwork/StatelessUnitTesting/target/
+/Classwork/ClassRoster/nbproject/
