Added DVDLibrary copy to practice repo

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /Classwork/StatelessUnitTesting/nbproject/
 /Classwork/StatelessUnitTesting/target/
 /Classwork/ClassRoster/nbproject/
+/Classwork/DVDLibrary/target/
