Added DVDLibrary unit tests

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /Classwork/StatelessUnitTesting/target/
 /Classwork/ClassRoster/nbproject/
 /Classwork/DVDLibrary/target/
+/Classwork/DVDLibrary/nbproject/
