Enum practice problems completed

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@
 /Classwork/ClassRoster/nbproject/
 /Classwork/DVDLibrary/target/
 /Classwork/DVDLibrary/nbproject/
+/DaysOfTheWeekEnum/target/
+/MathOperatorEnum/target/
+/Classwork/DaysOfTheWeekEnum/target/
+/Classwork/MathOperatorEnum/target/
