--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@
 /MathOperatorEnum/target/
 /Classwork/DaysOfTheWeekEnum/target/
 /Classwork/MathOperatorEnum/target/
+/Classwork/MonstrousDaoTestingLab/nbproject/
+/Classwork/MonstrousDaoTestingLab/target/
