--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@
 /Classwork/MathOperatorEnum/target/
 /Classwork/MonstrousDaoTestingLab/nbproject/
 /Classwork/MonstrousDaoTestingLab/target/
+/Classwork/BirthDAYCalculator/target/
