Car Lot Service Implementation

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@
 /Classwork/MonstrousDaoTestingLab/nbproject/
 /Classwork/MonstrousDaoTestingLab/target/
 /Classwork/BirthDAYCalculator/target/
+/Classwork/CarLot/target/
