BookTracker with XML injected spring

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@
 /Classwork/MonstrousDaoTestingLab/target/
 /Classwork/BirthDAYCalculator/target/
 /Classwork/CarLot/target/
+/Classwork/BookTracker/target/
