Vending Machine spring DI initial commit

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@
 /Classwork/BirthDAYCalculator/target/
 /Classwork/CarLot/target/
 /Classwork/BookTracker/target/
+/Classwork/VendingMachine/nbproject/
+/Classwork/VendingMachine/target/
