Spring/JDBC practice programs

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@
 /Classwork/BookTracker/target/
 /Classwork/VendingMachine/nbproject/
 /Classwork/VendingMachine/target/
+/Classwork/JDBCExampleStarter/target/
+/Classwork/JDBCTemplateExampleStarter/target/
