--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@
 /Classwork/VendingMachine/target/
 /Classwork/JDBCExampleStarter/target/
 /Classwork/JDBCTemplateExampleStarter/target/
+/Classwork/JDBCTComplexExampleStarter/target/
