JDBCTComplexExample unit tests added

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@
 /Classwork/JDBCExampleStarter/target/
 /Classwork/JDBCTemplateExampleStarter/target/
 /Classwork/JDBCTComplexExampleStarter/target/
+/Classwork/JDBCTComplexExampleStarter/nbproject/
