Completed simple web app

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@
 /Classwork/JDBCTemplateExampleStarter/target/
 /Classwork/JDBCTComplexExampleStarter/target/
 /Classwork/JDBCTComplexExampleStarter/nbproject/
+/Classwork/SimpleWebApp/target/
+/Classwork/SimpleWebApp2/target/
