SpringBoot/JDBC practice

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@
 /Classwork/JDBCTComplexExampleStarter/nbproject/
 /Classwork/SimpleWebApp/target/
 /Classwork/SimpleWebApp2/target/
+/Classwork/ToDoRESTAPI/target/
+/Classwork/GuessTheNumberRESTAPI/target/
