Completed full stack code-along

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@
 /Classwork/SimpleWebApp2/target/
 /Classwork/ToDoRESTAPI/target/
 /Classwork/GuessTheNumberRESTAPI/target/
+/Classwork/ClassRosterConsoloApp/nbproject/
+/Classwork/ClassRosterConsoleApp/nbproject/
